# ultrasonic

./: Cargo.toml  MAINTAINERS.md  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml
scripts/: typelib.sh
src/: codex.rs  contract.rs  issue.rs  lib.rs  macros.rs  operation.rs  state.rs  stl.rs  util.rs
src/isa/: bytecode.rs  core.rs  exec.rs  instr.rs  masm.rs  microcode.rs  mod.rs
stl/: Contract.vesper  UltraSONIC.vesper  UltraSONIC@0.1.0.sty  UltraSONIC@0.12.0.sta  UltraSONIC@0.12.0.stl  UltraSONIC@0.12.0.sty  UltraSONIC@0.13.0.sta  UltraSONIC@0.13.0.stl  UltraSONIC@0.13.0.sty
