[package]
name = "ultrasonic"
version = "0.12.0-beta.5"
authors = ["Dr Maxim Orlovsky <orlovsky@ubideco.org>"]
description = "Transactional execution layer with capability-based memory access for zk-AluVM"
repository = "https://github.com/AluVM/ultrasonic"
homepage = "https://ubideco.org/UltraSONIC"
keywords = ["state-machines", "distributed-systems", "decentralized"]
categories = ["algorithms", "cryptography", "science"]
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.81.0" # Due to the need for `Error` trait in `core`
exclude = [".github"]

[[bin]]
name = "ultrasonic-stl"
required-features = ["stl"]

[lib]
name = "ultrasonic"
crate-type = ["dylib", "rlib"]

[dependencies]
amplify = { version = "~4.8.0", default-features = false, features = ["derive", "hex"] }
baid64 = { version = "~0.4.1", optional = true }
strict_encoding = { version = "~2.8.1", default-features = false, features = ["derive"] }
strict_types = { version = "~2.8.2", optional = true }
zk-aluvm = "~0.12.0-beta.5"
commit_verify = { version = "~0.12.0-beta.5", features = ["derive"] }
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = ["chf-sha256", "baid64"]
all = ["stl", "baid64", "serde", "chf-sha256"]

std = ["zk-aluvm/std"]

chf-sha256 = []

stl = ["strict_types", "commit_verify/stl", "zk-aluvm/stl"]
serde = [
    "dep:serde",
    "amplify/serde",
    "commit_verify/serde",
    "zk-aluvm/serde",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8.4", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]

[patch.crates-io]
aluvm = { git = "https://github.com/AluVM/aluvm", branch = "master" }
zk-aluvm = { git = "https://github.com/AluVM/zk-aluvm", branch = "master" }
