[package]
name = "ultrasonic"
version = "0.12.0"
authors = ["Dr Maxim Orlovsky <orlovsky@ubideco.org>"]
description = "Transactional execution layer with capability-based memory access for zk-AluVM"
repository = "https://github.com/AluVM/ultrasonic"
homepage = "https://ubideco.org/UltraSONIC"
keywords = ["state-machines", "distributed-systems", "decentralized"]
categories = ["algorithms", "cryptography", "science"]
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.81.0" # Due to the need for `Error` trait in `core`
exclude = [".github"]

[[bin]]
name = "ultrasonic-stl"
required-features = ["stl", "vesper"]

[lib]
name = "ultrasonic"
crate-type = ["dylib", "rlib"]

[dependencies]
amplify = { version = "~4.9.0", default-features = false, features = ["derive", "hex"] }
baid64 = { version = "~0.4.1", optional = true }
strict_encoding = { version = "~2.9.1", default-features = false, features = ["derive"] }
strict_types = { version = "~2.9.0", optional = true }
zk-aluvm = "~0.12.0"
commit_verify = { version = "~0.12.0", features = ["derive"] }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
zk-aluvm = { version = "~0.12.0", features = ["log"] }
serde_test = "1.0.177"
bincode = "1.3.3"

[features]
default = ["chf-sha256", "baid64"]
all = ["stl", "baid64", "serde", "chf-sha256", "vesper"]

std = ["zk-aluvm/std"]

chf-sha256 = []

stl = ["strict_types", "commit_verify/stl", "zk-aluvm/stl"]
vesper = ["commit_verify/vesper"]

serde = [
    "dep:serde",
    "amplify/serde",
    "commit_verify/serde",
    "zk-aluvm/serde",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.9.1", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom2 = { package = "getrandom", version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage_nightly)'] }
